# crewai-agent-azure

./: README.md  debug_run.py  investment_report_NVDA.md  investment_report_ORCL.md  investment_report_TSLA.md  main.py  pyproject.toml
frontend/: app.py
src/agents/: agents.py  crew.py
src/api/: routes.py
src/shared/: config.py  database.py  storage.py
